Clear remaining Sonar code smells and remove dead code
- Remove 3 unused private methods in DiscoveryAttributeServiceImpl (S1144):
  listCas(), listEndEntityProfiles(), ejbcaRestApiUrl()
- Drop public modifier from JUnit5 test classes/methods (S5786):
  CertificateControllerImplTest, TrustedCertificatesConfigTest,
  CrmfCertificateRequestTest, DatabaseMigrationTest, EjbcaVersionTest,
  EJBCAIT
- Replace collect(Collectors.toList()) with toList() throughout (S6204)
- Remove commented-out code in pom.xml, EJBCAIT, EjbcaServiceImpl,
  EndEntityEjbcaServiceImpl, CertificateEjbcaServiceImpl,
  DiscoverySupportController (S125/xml:S125)
- Convert @RequestMapping(method=GET) to @GetMapping in
  DiscoverySupportController (S4488)
- Simplify lambda expressions in UsernameGenMethod.findByCode (S1602/S3878)
- Rename enum field 'method' to 'code' and drop redundant this. (S117)
- Drop private constructor modifier from UsernameGenMethod (S115)
- Add private constructors to utility classes EjbcaUtils, LocalAttributeUtil,
  OidUtils, CertificateRequestUtils (S1118)
- Fix logger class references in AttributeServiceImpl and EjbcaRestApiClient
  (S3416)
- Remove unused imports after refactoring (S1128)
- Replace Integer.valueOf() with Integer.parseInt() for primitive int (S3457)
- Rename @Value-injected field EJBCA_SEARCH_PAGE_SIZE to ejbcaSearchPageSize
  to follow field naming conventions (S115)
- Remove actionable TODO comments (S1135)
- Add assertion to EJBCAIT.testListProfiles; replace stream().forEach with
  forEach (S2699/S3706)
- Simplify nested if in DiscoverySupportController.checkEjbcaVersion (S1066)
- Remove unused import of BaseApiClient; remove Collectors imports where no
  longer needed